--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "eslint-plugin-security": "^3.0.1",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
     }
